--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.103.1
 opencv_python_headless==4.7.0.72
 paddleocr>=2.0.1
+paddlepaddle==2.1.0
 pdf2image==1.16.0
 PyMuPDF==1.21.1
 uvicorn
